# portfolio-optimizer

./: .env.example  .gitignore  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: alembic.ini  env.py
alembic/versions/: 0001_initial_schema.py  0002_add_sector_gap_threshold.py  8299d10c753c_add_risk_free_series_natural_key_.py  e0da26f66c61_add_oauth_tokens_table.py
docs/: API-CONTRACT.md  DATA-MODEL.md  DB-SCHEMA.MD  ENGINEERING-PRINCIPLES.md  ER-DIAGRAM.md  REQUIREMENTS.md  SYSTEM-SPEC.md  UI-SPEC.md  WORKFLOW-DIAGRAMS.md
memory/: MEMORY.md
scripts/: test_fred.py  test_schwab_auth.py
src/: config.py
src/commands/: _cov_utils.py  assets.py  estimation.py  holdings.py  ingest.py  optimization.py  risk.py  router.py  screening.py  universes.py
src/domain/models/: __init__.py  assets.py  assumptions.py  backtest.py  drift.py  enums.py  holdings.py  market_data.py  optimization.py  scenarios.py  screening.py
src/domain/repositories/: __init__.py  assets.py  assumptions.py  backtest.py  base.py  drift.py  holdings.py  optimization.py  prices.py  returns.py  risk_free.py  scenarios.py  screening.py  universes.py  vendors.py
src/domain/services/: __init__.py  backtest.py  drift.py  estimation.py  optimization.py  screening.py
src/infrastructure/: database.py
src/infrastructure/auth/: __init__.py  schwab_oauth.py  token_repository.py
src/infrastructure/persistence/: __init__.py
tests/unit/: test_backtest.py  test_database.py  test_drift.py  test_models.py  test_optimization.py  test_screening.py
(+80 files in other folders)
