[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "portfolio-optimizer"
version = "0.1.0"
description = "RebelWealth portfolio optimization engine"
requires-python = ">=3.11"
dependencies = [
    # Data
    "pandas>=2.2",
    "numpy>=1.26",
    # Optimization
    "cvxpy>=1.4",
    "scipy>=1.12",
    # Statistics / estimation
    "scikit-learn>=1.4",
    # Database
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.13",
    "asyncpg>=0.29",
    # API
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    # HTTP client (vendor data fetching)
    "httpx>=0.27",
    # Frontend
    "streamlit>=1.35",
    "plotly>=5.22",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
